update models set createdAt to int64 instead of int32. add example of how to create API key
